--- a/dart_dasar_08_async/pubspec.yaml
+++ b/dart_dasar_08_async/pubspec.yaml
@@ -1,15 +1,15 @@
-name: dart_dasar_07_unit_test
+name: dart_dasar_08_async
 description: A sample command-line application.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
+
 environment:
   sdk: ^3.0.5
 
 # Add regular dependencies here.
-dependencies: null
-# path: ^1.8.0
+dependencies:
+  # path: ^1.8.0
+
 dev_dependencies:
-  build_runner: ^2.4.6
   lints: ^2.0.0
-  mockito: ^5.4.2
-  test: ^1.24.7
+  test: ^1.21.0
